@@ -698,3 +698,36 @@ class Table(DictArray):
         """returns the sum of row values for column"""
         vals = [r[column] for r in self]
         return sum(vals)
+    
+    def transposed(self, new_column_name, select_as_header=None, **kwargs):
+        """returns the transposed table.
+        
+        Arguments:
+            - new_column_name: the existing header will become a column with
+              this name
+            - select_as_header: current column name containing data to be used
+              as the header. Defaults to the first column.
+        """
+        select_as_header = select_as_header or self.Header[0]
+        assert select_as_header in self.Header, \
+                    '"%s" not in table Header' % select_as_header
+        
+        raw_data = self.getRawData()
+        raw_data.insert(0, self.Header)
+        transposed = numpy.transpose(raw_data)
+        
+        # find indices for the header and non header rows
+        header_index = None
+        for index, row in enumerate(transposed):
+            if row[0] == select_as_header:
+                header_index = index
+        
+        assert header_index is not None
+        data_indices = range(0, header_index)+range(header_index+1,
+                                                    len(transposed))
+        
+        header = list(numpy.take(transposed, [header_index], axis=0)[0])
+        header = [new_column_name]+header[1:]
+        rows = numpy.take(transposed, data_indices, axis=0)
+        return Table(header=header, rows=rows, **kwargs)
+    
